--- a/src/styles/pacientesPage.css
+++ b/src/styles/pacientesPage.css
@@ -31,7 +31,7 @@
         background-color: #fff;
         width: 100%;
         margin: 30px 0;
-        padding: 0 16px;
+        padding: 0 16px 18px 16px;
         border-radius: 16px;
         max-height: 450px;
         display: flex;
